--- a/src/readme
+++ b/src/readme
@@ -1,14 +1,9 @@
 python visitor_info_app.py
-
-##Enter the file path to read from
-inputPS2.txt
-
-##print file path to know trending city
-trendCity
-
-##print file path to know Birthday of the visitor
+print file path to read:
+C:\\Users\\Sony\\Desktop\\M-tech\\1St-Sem\\Data Structures and Algorithms Design-S2-19_DSECLZG519\\assignments\\inputPS2.txt
+Enter any of the options Visitor name or Trending City or Birthday of Visitors
 birthdayVisitor
-##enter birthDateFrom
+enter birthDateFrom:birthDateTo
 13-Jan-1995
-##enter birthDateTo
-13-Apr-1995
+12-Apr-1995
+
